@@ -11,6 +11,9 @@
 	* themes/StyleTab/theme.jl: updated to use frame-font instead of
 	default-font. Remove custom-font-setting option from StyleTab
 
+	* lisp/sawfish/wm/frames.jl: added options for chaning highlight and
+	clicked font-colors for inactive tabs and titlebars
+
 2011-05-13  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/frames.jl: add possibility to also change the
 	font-color for highlighted and clicked frames regardless of theme
